# Retro_Pong

./: CMakeLists.txt  README.md  chart.cpp  chart.h  connection.cpp  connection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  menu.ui  ponging.cpp  ponging.h  test.cpp  test.h  test.ui
dox/: Doxyfile
dox/html/: _c_m_s_i_s__m_i_s_r_a__exceptions.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__chart_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__chart_8cpp_8d.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__chart_8cpp_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__menu_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2pong__autogen_2_e_w_i_e_g_a46_w_w_2moc__menu_8cpp_8d.html  (+2063 more)
prj/: CMakeLists.txt.user.9ff6adc  chart.cpp  chart.h  connection.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  ponging.cpp  ponging.h
prj/QT/: chart.cpp  (+20 more)
(+367 files in other folders)
